# mvs_tennis

./: ## 问题1：txt.txt  .gitignore  ACCEPTANCE_CHECKLIST.md  INDEX.md  QUICK_REFERENCE.md  WORK_COMPLETION_REPORT.md  analysis_summary.json  monorepo-plan.md  mvs_ball_localization_types.py  output.txt  output.txt.json  pyproject.toml  readme.md  repo_tree.txt  tennis_detections.json  todo-list.txt  工业相机Windows SDK开发指南V4.7.0（Python）.chw
.bak.github/: princ.comments.instructions.md
.bak.github/instructions/: python-engineering.instructions.md
.bak.github/prompts/: 011_execute_phase.prompt.md  030_layout_cleanup.prompt.md
.github/: copilot-instructions.md  princ.comments.instructions.md
.github.back/prompts/: 010_refactor_hotspot.prompt.md  020_package_module.prompt.md
.github/instructions/: copilot-session-log.instructions.md  python-engineering.instructions.md  python_refactor.instructions.md  repo_layout_and_packaging.instructions.md
.github/prompts/: 000_repo_audit.prompt.md  (+5 more)
configs/: README.md  offline_color_debug.yaml  offline_pt_windows_cpu.yaml  offline_pt_windows_cpu_params_4cam.yaml  offline_pt_windows_ex.yaml  offline_rknn_board_or_linux.yaml  online_master_slave_line0.yaml  online_master_slave_line1.yaml  online_pt_windows_cpu_software_trigger.yaml  online_pt_windows_cpu_software_trigger_params_4cam.yaml  online_pt_windows_cpu_two_level_roi_4cam.yaml
docs/: MIGRATION_MAP.md  PROJECT_COMPLETION_SUMMARY.md  architecture-and-dataflow.md  command-recipes.md  development-and-testing.md  improvement-suggestions.md  latency-measurement.md  layout_migration.md  python-repository-overview.md  run-modes-and-debugging.md
examples/: quad_capture_demo.py
src/: `dev_timestamp` 含义与“曝光开始时间”支持情况.md
temp/: curve2_curve3_compare.no-track.html  curve2_curve3_compare.no-track.json  curve2_curve3_compare.py  curve2_curve3_compare.targety1.html  curve2_curve3_compare.targety1.json
tests/: conftest.py  test_calibration_fuse_params_json.py  test_capture_relayout.py  test_capture_run_analysis.py  test_capture_session.py  test_curve_second_land_interfaces.py  test_curve_stage_episode.py  test_curve_stage_episode_second_land.py  test_curve_stage_smoke.py  test_curve_v2_second_stage_y_fit_mode.py  test_curve_v2_smoke.py  test_curve_v3_second_land_time.py  test_detector_pt.py  test_localize_balls.py  test_mvs_configure_resolution.py  test_offline_pt_device_controls.py  test_offline_serials_filter.py  test_online_output_controls.py  test_online_runtime_wiring_sensor_roi.py  test_online_terminal_output.py  test_report_capture_timing.py  test_tennis_geometry.py  test_time_mapping.py  test_time_mapping_group_metrics.py  test_time_mapping_online.py  test_two_stage_roi_controller.py
tmp/: copilot_session.md
tools/: README.md  debug_master_slave_timing.py  generate_camera_extrinsics.py  generate_params_4cam_calib.py  generate_sample_sequence.py  image_time_sync.py  mvs_analyze_capture_run.py  mvs_fit_time_mapping.py  mvs_probe_time_sync.py  mvs_quad_capture.py  mvs_relayout_by_camera.py  mvs_runtime_roi_probe.py  report_capture_timing.py  tennis_localize_from_detections.py  test_best_pt_ultralytics.py  test_tennis_test_all_ultralytics_vis.py  time_mapping_report.py  ultralytics_best_pt_smoketest.py
瞎测试的/: sdk_init.py
(+140 files in other folders)
