[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvs-deployment"
version = "0.1.0"
description = "Multi-camera (Hikrobot MVS) capture + tennis ball 3D localization utilities"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy",
  "opencv-python",
  "pyyaml",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "ultralytics>=8.4.6",
]

[project.scripts]
tennis3d-online = "tennis3d.apps.online_mvs_localize:main"
tennis3d-offline = "tennis3d.apps.offline_localize_from_captures:main"
tennis3d-fake-calib = "tennis3d.apps.fake_calibration:main"
tennis3d-offline-detect = "tennis3d.apps.offline_detect:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
# 说明：仓库里存在 tools/test_*.py 之类的“工具脚本”。
# 为避免与单测语义混淆、也避免 pytest 误收集，把测试发现范围固定到 tests/。
testpaths = ["tests"]
