[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvs-deployment"
version = "0.1.0"
description = "Multi-camera (Hikrobot MVS) capture + tennis ball 3D localization utilities"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy",
  "opencv-python",
  "pyyaml",
  "scipy>=1.15.3",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "ultralytics>=8.4.6",
]

[project.scripts]
tennis3d-online = "tennis3d.apps.online.entry:main"
tennis3d-offline = "tennis3d.apps.offline_localize_from_captures:main"
tennis3d-fake-calib = "tennis3d.apps.fake_calibration:main"
tennis3d-offline-detect = "tennis3d.apps.offline_detect:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
# 说明：`tools/` 仅放“可执行工具脚本”，不属于单元测试。
# 约定：tools 下脚本禁止使用 `test_*.py` / `*_test.py` 这类命名，避免与单测语义混淆。
# 为确保测试发现范围稳定，pytest 的收集范围固定到 `tests/`（不会误收集 tools/、examples/ 等目录）。
testpaths = ["tests"]
