[project]
name = "mvs-deployment"
version = "0.1.0"
description = "MVS_Deployment workspace root (virtual project)"
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
  # 说明：workspace root 自身不产出 Python 包；通过依赖将各 member 装入同一环境。
  "mvs",
  "curve",
  "tennis3d-core",
  "tennis3d-detectors",
  "tennis3d-online",
]

[tool.uv]
# 说明：将 root 作为 virtual project（不 build、不 install），只作为 workspace 的聚合入口。
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# 说明：显式声明 workspace 内部依赖从 workspace 提供（而非从 PyPI 拉取同名包）。
mvs = { workspace = true }
curve = { workspace = true }
tennis3d-core = { workspace = true }
tennis3d-detectors = { workspace = true }
tennis3d-online = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
# 说明：`tools/` 仅放“可执行工具脚本”，不属于单元测试。
# 约定：tools 下脚本禁止使用 `test_*.py` / `*_test.py` 这类命名，避免与单测语义混淆。
# 为确保测试发现范围稳定，pytest 的收集范围固定到 `tests/`（不会误收集 tools/、examples/ 等目录）。
testpaths = ["tests"]
